# boilerplate

./: .clang-tidy  .gitmodules  CMakeLists.txt
template/: main.cc
template/tests/: test.cc
